# Dschoutezo_ProgettoTransazioni

./: .gitignore  Account.cpp  Account.h  CMakeLists.txt  Date.cpp  Date.h  README.md  Transaction.cpp  Transaction.h  main.cpp
test/: AccountIOTest.cpp  AccountTest.cpp  CMakeLists.txt  DateTest.cpp  TransactionTest.cpp
